rbx-dom/rbx_binary/src/tests/snapshots/rbx_binary__tests__util__package-link__encoded.snap
---
source: rbx-dom/rbx_binary/src/tests/util.rs
expression: text_roundtrip
---
num_types: 2
num_instances: 2
chunks:
  - Sstr:
      version: 0
      entries:
        - len: 0
          hash: af1349b9f5f9a1a6a0404dea36dcc9499bcb25c9adc112b7cc9a93cae41f3262
  - Inst:
      type_id: 1
      type_name: Model
      object_format: 0
      referents:
        - 1
  - Inst:
      type_id: 0
      type_name: PackageLink
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 1
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 1
      prop_name: LevelOfDetail
      prop_type: Enum
      values:
        - 0
  - Prop:
      type_id: 1
      prop_name: ModelMeshCFrame
      prop_type: CFrame
      values:
        - position:
            - 0
            - 0
            - 0
          orientation:
            - - 1
              - 0
              - 0
            - - 0
              - 1
              - 0
            - - 0
              - 0
              - 1
  - Prop:
      type_id: 1
      prop_name: ModelMeshData
      prop_type: SharedString
      values:
        - 0
  - Prop:
      type_id: 1
      prop_name: ModelMeshSize
      prop_type: Vector3
      values:
        - - 0
          - 0
          - 0
  - Prop:
      type_id: 1
      prop_name: Name
      prop_type: String
      values:
        - Model
  - Prop:
      type_id: 1
      prop_name: NeedsPivotMigration
      prop_type: Bool
      values:
        - false
  - Prop:
      type_id: 1
      prop_name: PrimaryPart
      prop_type: Ref
      values:
        - -1
  - Prop:
      type_id: 1
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
  - Prop:
      type_id: 1
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 1
      prop_name: WorldPivotData
      prop_type: OptionalCFrame
      values:
        - ~
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: AutoUpdate
      prop_type: Bool
      values:
        - false
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - PackageLink
  - Prop:
      type_id: 0
      prop_name: PackageIdSerialize
      prop_type: String
      values:
        - "rbxassetid://9111823334"
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: VersionIdSerialize
      prop_type: Int64
      values:
        - 1
  - Prnt:
      version: 0
      links:
        - - 0
          - 1
        - - 1
          - -1
  - End
